# ce-watch

./: Cargo.toml  README.md  ceapp.toml
src/: auth.rs  console.html  detect.rs  main.rs  mesh.rs  store.rs
