[package]
name = "ce-watch"
version = "0.1.0"
edition = "2024"
description = "ce-watch — operator security console for CE: durable append-only flag log, token-gated ingest, and an admin-only dark dashboard. Light axum service beside the relay; a thin relying party of ce-auth for admin device-auth (no local device registry)."

[[bin]]
name = "ce-watch"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
# ce-rs SDK: drives the co-located ce node over http://127.0.0.1:8844 to drain the mesh
# app-message stream (messages_stream). Flag ingest is now a real mesh hop authenticated by the
# libp2p sender NodeId — no HTTP, no shared token between the hub and ce-watch.
ce-rs = { path = "../ce-rs" }
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hex = "0.4"

[profile.release]
opt-level = 2
strip = true
