[package]
name = "ce-monitor"
version = "0.1.0"
edition = "2024"
description = "ce-monitor — operator security console for CE: durable append-only flag log, token-gated ingest, and an admin-only dark dashboard. Light axum service beside the relay; a thin relying party of ce-auth for admin device-auth (no local device registry)."

[[bin]]
name = "ce-monitor"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# ce-rs SDK: drives the co-located ce node over http://127.0.0.1:8844. The SAME client (1) drains the
# inbound mesh app-message stream (messages_stream) for flag ingest — authenticated by the libp2p
# sender NodeId, no shared token — and (2) locates + requests the mesh-native ce-auth service
# (locate::call on topic "ce-auth/rpc") for admin device-auth. ce-watch makes NO outbound HTTP: the
# only HTTP edge is the browser console hitting ce-watch's own endpoints. reqwest is gone.
# `locate` = mesh-native service discovery + selection (ce_rs::locate) used to find a live ce-auth.
ce-rs = { path = "../ce-rs", features = ["locate"] }
futures-util = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hex = "0.4"

[profile.release]
opt-level = 2
strip = true
